fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -164,7 +164,7 @@ body {
     justify-content: flex-start;
     align-items: center;
 	padding: 1em 2em;
-	margin-top: 13em;
+	margin-top: 15em;
 	width: 100%;
 	height: 100%;
 }
@@ -194,8 +194,8 @@ body {
 .homepage-description {
 	text-align: center;
 	width: 500px;
-	margin-top: 5em;
-	margin-bottom: 5em;
+	margin-top: 6em;
+	margin-bottom: 6em;
 	padding-left: 2em;
 	padding-right: 2em;
 }
@@ -422,6 +422,10 @@ body {
 
 .full-image-container {
     position: fixed;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
     background: var(--color-dark-brown2);
     color: var(--color-white);
 	border-radius: 20px;
@@ -433,10 +437,6 @@ body {
 }
 
 .full-image {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 	width: 12em;
 	height: 18em;
 	border-radius: 10px;
@@ -452,7 +452,6 @@ body {
 .full-image-title {
 	font-size: var(--fs-l);
 	font-weight: var(--fw-med);
-	text-align: center;
 	margin-top: 2em;
 	margin-bottom: 2em;
 }
